fix: nested rows example spacing and row border as per design guide

--- a/react/nestedRows/src/Example/example.scss
+++ b/react/nestedRows/src/Example/example.scss
@@ -19,9 +19,12 @@
   position: relative;
 }
 
-.cds--data-table th:first-of-type,
-.cds--data-table td:first-of-type {
+.cds--data-table th:first-of-type {
   padding-inline-start: 0.5rem;
+}
+
+.cds--data-table td:first-of-type {
+  padding-inline-start: 0;
 }
 
 .tanstack-example {
@@ -43,7 +46,7 @@
 
 .row-content {
   flex: 1 0 auto;
-  padding-left: 1rem;
+  padding-left: $spacing-03;
   height: 3rem;
   align-content: center;
 }
@@ -53,7 +56,7 @@
   content: '';
   position: absolute;
   bottom: -1px;
-  left: -0.5rem;
+  left: 0;
   height: 1px;
   background-color: var(--cds-layer, #f4f4f4);
 }
